[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
margin_right = 1025.0
margin_bottom = 600.0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 150.0
margin_top = 154.0
margin_right = 348.0
margin_bottom = 223.0
text = "Aperte aqui para ver a lista"
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Button"]
margin_left = 1.0
margin_top = -110.0
margin_right = 195.0
margin_bottom = -43.0
color = Color( 0, 0, 0, 1 )

[node name="Label1" type="Label" parent="Button"]
margin_left = 2.0
margin_top = -110.0
margin_right = 194.0
margin_bottom = -46.0
align = 1
valign = 1
uppercase = true

[node name="Button2" type="Button" parent="."]
margin_left = 148.0
margin_top = 467.0
margin_right = 351.0
margin_bottom = 522.0
text = "Aperte aqui pra ver a lista digitada"

[node name="ColorRect3" type="ColorRect" parent="Button2"]
margin_left = -33.0
margin_top = -112.0
margin_right = 240.0
margin_bottom = -32.0
color = Color( 0, 0, 0, 1 )

[node name="Label2" type="Label" parent="Button2"]
margin_left = -10.0
margin_top = -108.0
margin_right = 217.0
margin_bottom = -44.0
align = 1
valign = 1
uppercase = true

[node name="LineEdit1" type="LineEdit" parent="Button2"]
margin_left = -8.0
margin_top = -169.0
margin_right = 208.0
margin_bottom = -125.0

[node name="Button3" type="Button" parent="."]
margin_left = 596.0
margin_top = 158.0
margin_right = 787.0
margin_bottom = 223.0
text = "Aperte aqui para ver o texto"
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect2" type="ColorRect" parent="Button3"]
margin_left = -2.0
margin_top = -109.0
margin_right = 192.0
margin_bottom = -47.0
color = Color( 0, 0, 0, 1 )

[node name="Label3" type="Label" parent="Button3"]
margin_top = -108.0
margin_right = 193.0
margin_bottom = -47.0
align = 1
valign = 1
clip_text = true

[node name="Button4" type="Button" parent="."]
margin_left = 582.0
margin_top = 476.0
margin_right = 799.0
margin_bottom = 529.0
text = "Aperte aqui ver o valor digitado"

[node name="ColorRect4" type="ColorRect" parent="Button4"]
margin_left = -33.0
margin_top = -115.0
margin_right = 248.0
margin_bottom = -37.0
color = Color( 0, 0, 0, 1 )

[node name="LineEdit2" type="LineEdit" parent="Button4"]
margin_left = 3.0
margin_top = -175.0
margin_right = 211.0
margin_bottom = -128.0

[node name="Label4" type="Label" parent="Button4"]
margin_left = -16.0
margin_top = -108.0
margin_right = 246.0
margin_bottom = -46.0
align = 1
valign = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
